Solve bug where admin, bsManagers, clients and employees had a null password afther their creation.
Modify
AdminMapper, bsManagerMapper, ClientMapper, EmployeeMapper to add the password field inside the method toEntity(Form form)